[package]
name = "json-parser"
version = "1.0.0"
authors = ["Art Deineka <art.deineka@darkruby.co.uk>"]
edition = "2018"
description="JSON parser"
license="MIT"
keywords=["json", "parser", "token", "tokenizer"]
readme = "README.md"
categories = ["data-structures", "development-tools", "encoding", "parsing"]

[dependencies]
regex = "1"